--- a/ts-echarts/vueapp/vueecharts/test.ipynb
+++ b/ts-echarts/vueapp/vueecharts/test.ipynb
@@ -60,6 +60,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DailyReadingActivity\\n',\n",
+       " 'QDBookMainShelfViewController',\n",
+       " 'QDBookMainShelfViewController\\n',\n",
+       " 'QDBookShelfPagerFragment\\n',\n",
+       " 'QDBookShelfViewController\\n',\n",
+       " 'QDNewLeaderReadDetailViewController\\n'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"1.txt\") as f:\n",
+    "    t = f.readlines()\n",
+    "    t =set(t)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
